Contrast fix search block

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -218,12 +218,18 @@
   --docsearch-searchbox-shadow: 0 0 0 2px var(--docsearch-primary-color);
   --docsearch-key-gradient: linear-gradient(-225deg, var(--ifm-color-gray-200), var(--ifm-color-gray-100));
   --docsearch-key-shadow: inset 0 -2px 0 0 var(--ifm-color-gray-300), inset 0 0 1px 1px var(--ifm-color-gray-100), 0 1px 2px 1px rgba(203, 213, 225, 0.2);
+  --docsearch-muted-color: var(--ifm-color-gray-800);
 }
 
 .DocSearch-Button.DocSearch-Button {
   border: 1px solid var(--ifm-color-emphasis-300);
   border-radius: var(--ifm-pagination-nav-border-radius);
   color: var(--ifm-navbar-link-color);
+}
+
+.DocSearch-Button-Key.DocSearch-Button-Key,
+.DocSearch-Commands-Key.DocSearch-Commands-Key {
+  color: var(--ifm-color-gray-500);
 }
 
 .hidden {
